--- a/M.A.C./Base.lproj/Main.storyboard
+++ b/M.A.C./Base.lproj/Main.storyboard
@@ -100,7 +100,7 @@
                                 <rect key="frame" x="269" y="173" width="63" height="30"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="30" id="qNC-rI-y9J"/>
-                                    <constraint firstAttribute="width" constant="63" id="qR2-bU-EbG"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="63" id="qR2-bU-EbG"/>
                                     <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="zdA-PP-dpm"/>
                                 </constraints>
                                 <state key="normal" title="LOOKUP">
