--- a/11_VIEW/Main.storyboard
+++ b/11_VIEW/Main.storyboard
@@ -53,9 +53,6 @@
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
-                                <connections>
-                                    <segue destination="mjN-uh-HRK" kind="show" id="kHQ-WR-6JN"/>
-                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -67,7 +64,7 @@
                         <barButtonItem key="leftBarButtonItem" title="Item" systemItem="edit" id="18L-BN-a98"/>
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="Vid-UE-8Fi">
                             <connections>
-                                <segue destination="mjN-uh-HRK" kind="presentation" id="sh2-3Z-HvE"/>
+                                <segue destination="mjN-uh-HRK" kind="presentation" identifier="AddMACAddressItem" id="sh2-3Z-HvE"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -100,9 +97,6 @@
                                 <rect key="frame" x="20" y="118" width="560" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
-                                <connections>
-                                    <outlet property="delegate" destination="Yec-kt-yz8" id="wgm-Zq-Wus"/>
-                                </connections>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3d6-Ym-CgW">
                                 <rect key="frame" x="210" y="173" width="181" height="30"/>
@@ -114,9 +108,6 @@
                                 <state key="normal" title="LOOK UP MAC ADDRESS">
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
-                                <connections>
-                                    <action selector="buttonDownload:" destination="Yec-kt-yz8" eventType="touchUpInside" id="pMc-nu-1Cv"/>
-                                </connections>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" misplaced="YES" editable="NO" text="RESULTS" translatesAutoresizingMaskIntoConstraints="NO" id="eDi-6D-f6q">
                                 <rect key="frame" x="20" y="211" width="560" height="369"/>
@@ -141,23 +132,12 @@
                             <constraint firstItem="pp8-ze-2Wv" firstAttribute="leading" secondItem="XHr-ZD-IpB" secondAttribute="leading" constant="20" id="ymT-Vu-jnZ"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="MAC ADDRESS LOOKUP" id="ZYm-VL-sYb">
-                        <barButtonItem key="leftBarButtonItem" systemItem="trash" id="ziv-J2-l9L">
-                            <connections>
-                                <action selector="dismissDetailViewController:" destination="Yec-kt-yz8" id="CVS-dp-sI5"/>
-                            </connections>
-                        </barButtonItem>
-                        <barButtonItem key="rightBarButtonItem" systemItem="save" id="a50-JE-9vM">
-                            <connections>
-                                <action selector="dismissDetailViewController:" destination="Yec-kt-yz8" id="NlE-q9-Fjb"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" title="MAC ADDRESS LOOKUP" id="ZYm-VL-sYb"/>
                     <connections>
-                        <outlet property="buttonLookUp" destination="3d6-Ym-CgW" id="Nl7-pR-LOG"/>
-                        <outlet property="segmentedControlInputTypes" destination="pp8-ze-2Wv" id="uoN-oE-n5Z"/>
-                        <outlet property="textField" destination="Zeu-or-di2" id="M0N-yf-rRg"/>
-                        <outlet property="textViewResults" destination="eDi-6D-f6q" id="nxl-5Q-UwN"/>
+                        <outlet property="button" destination="3d6-Ym-CgW" id="L1H-Ty-Vty"/>
+                        <outlet property="segmentedControl" destination="pp8-ze-2Wv" id="SkU-ef-Np7"/>
+                        <outlet property="textField" destination="Zeu-or-di2" id="K1n-eT-nO9"/>
+                        <outlet property="textView" destination="eDi-6D-f6q" id="lge-Tu-ENV"/>
                         <segue destination="QmS-dX-ZNv" kind="show" identifier="BarcodeScannerSegue" id="iNE-ZX-uLT"/>
                     </connections>
                 </viewController>
@@ -530,7 +510,4 @@
         <image name="Search" width="28" height="28"/>
         <image name="Settings" width="28" height="28"/>
     </resources>
-    <inferredMetricsTieBreakers>
-        <segue reference="kHQ-WR-6JN"/>
-    </inferredMetricsTieBreakers>
 </document>
